<resources>
    <string name="app_name">Contact Sharing</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="set_profile">Setup Profile</string>
    <string name="share_contact">Share contact</string>
    <string name="name">Your name *</string>
    <string name="first_contact">First contact *</string>
    <string name="second_contact">Second contact</string>
    <string name="email">Email</string>
    <string name="share_others">Share links or other texts</string>
    <string name="share_using">Share</string>
</resources>