<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/centered_toolbar"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:background="@drawable/rectanguler_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rectanguler_background"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"

                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/first_contact_layout"
                android:hint="@string/first_contact"
                android:background="@drawable/rectanguler_background"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rectanguler_background"
                    android:imeOptions="actionDone"

                    android:textColor="@color/black"
                    android:importantForAutofill="no"
                    android:inputType="phone"

                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/second_contact_layout"
                android:hint="@string/second_contact"
                android:textColorHint="@color/black"
                android:background="@drawable/rectanguler_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/second_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rectanguler_background"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="phone"

                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:id="@+id/email_layout"
                android:background="@drawable/rectanguler_background"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rectanguler_background"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"

                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:textAllCaps="false"
                android:text="@string/submit"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>

